--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hi</title>
+    <title>Expedia.com Open Source</title>
+    <style type="text/css">
+      #logo { width: 240px; }
+    </style>
   </head>
   <body>
-    <p>Hi</p>
+    <img id="logo" src="http://www.expedia.com/static/ui_toolkit/v2-0/images/exp-logo.svg">
   </body>
 </html>
