--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <title>Expedia.com Open Source</title>
     <style type="text/css">
-      #logo { width: 240px; }
+     body { font-size: 160%; }
+     #logo { width: 200px; }
     </style>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
-    <img id="logo" src="http://www.expedia.com/static/ui_toolkit/v2-0/images/exp-logo.svg">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Expedia</a>
+        </div>
+      </div>
+    </nav>
+    <div class="jumbotron">
+      <div class="container">
+        <!--p><img id="logo" src="http://www.expedia.com/static/ui_toolkit/v2-0/images/exp-logo.svg"></p-->
+        <h1>Open Source Software Center</h1>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Seiso</h2>
+          <p>Devops data hub.</p>
+          <p><i class="fa fa-globe"></i> <a href="http://seiso.io">Web Site</a></p>
+          <p><i class="fa fa-github"></i> <a href="https://github.com/ExpediaDotCom/seiso">GitHub</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Tesla</h2>
+          <p>High-performance binary object serialization framework.</p>
+          <p><i class="fa fa-github"></i> <a href="https://github.com/ExpediaDotCom/tesla">GitHub</a></p>
+        </div>
+      </div>
+      <hr>
+      <footer>
+        <p><a href="http://www.lifeatexpedia.com/brands/expedia/">Jobs @ Expedia</a></p>
+        <p>Copyright &copy; 2015 Expedia, Inc. All rights reserved.</p>
+      </footer>
+    </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="resources/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
