Turned thumbnails into links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             
             <!-- Seiso -->
             <div class="project">
-              <img src="resources/images/seiso-thumb.png" alt="Seiso" class="thumb img-rounded pull-left">
+              <div class="pull-left">
+                <a href="http://seiso.io"><img src="resources/images/seiso-thumb.png" alt="Seiso" class="thumb img-rounded"></a>
+              </div>
               <h2>
                 Seiso
                 <a href="http://seiso.io"><i class="fa fa-globe"></i></a>
@@ -46,7 +48,9 @@
 
             <!-- Tesla -->
             <div class="project">
-              <img src="resources/images/tesla-thumb.png" alt="Tesla" class="thumb img-rounded pull-left">
+              <div class="pull-left">
+                <a href="https://github.com/ExpediaDotCom/tesla"><img src="resources/images/tesla-thumb.png" alt="Tesla" class="thumb img-rounded"></a>
+              </div>
               <h2>Tesla <a href="https://github.com/ExpediaDotCom/tesla"><i class="fa fa-github"></i></a></h2>
               <p>High-performance binary object serialization framework.</p>
               <div class="clearfix"></div>
