--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Expedia.com Open Source</title>
+    <meta http-equiv="refresh" content="0;URL='/haystack/'" /> 
     <style type="text/css">
       #logo { width: 240px; }
     </style>
